Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

2.04 2015-06-24 23:26:28 America/Toronto
    - Fix test failures on Perl 5.8

2.03 2015-06-19 09:59:45 America/Toronto
    - Add win8_1 method (Daniel Stadie)

2.02 2015-06-17 18:18:17 America/Toronto
    - Default to using an empty string if an undef UA is provided (ben hengst)

2.01 2015-04-24 23:05:13 America/Toronto
    - Handle "CriOS" entries correctly (andrewmoise)
    - Only detect java when no browser is detected, and make UCBrowser a
      detected browser (andrewmoise)
    - Detect "tablet" on Kindle Fire (and Chrome on Android tablets in general)
      (andrewmoise)
    - Distinguish Android tablets in device_string (andrewmoise)
    - Handle CriOS, rubylib, golib, and Dalvik (andrewmoise)
    - Detect "Mobilesafari/" as Mobile Safari (andrewmoise)
    - Detect "Windows 2000" as Win2k (andrewmoise)
    - Only detect NCR Unix on word boundary (andrewmoise)
    - Try tighter detection of robot names based on fragments (andrewmoise)
    - Fix java detection to be more strict (andrewmoise)
    - Fix up Android tablet detection (andrewmoise)
    - Add proper detection for old Windows versions in Opera (andrewmoise)
    - Add apache http client detection (andrewmoise)
    - Fix detection of SCO Unix to trigger fewer false positives (andrewmoise)
    - Correct detection of (most) robots based on "+http://blah" (andrewmoise)

2.00 2015-03-30 21:46:25 America/Toronto
    - Standardize interface:
        browser         ()
        device     X    _string()
        engine          _version(), _major(), _minor(), _beta()
        os
        robot
      (andrewmoise)
    - Add Galeon, Seamonkey, and Epiphany as specifically detected
      browsers (andrewmoise)
    - Some internal changes that make things simpler and faster
      (andrewmoise)
    - Remove the $check argument (e.g. $ua->beta('.45') to check
      whether the beta version is ".45") (andrewmoise)