@@ -5,7 +5,7 @@ author  = Olaf Alders <olaf@wundercounter.com> (current maintainer)
 license = Perl_5
 copyright_holder = Lee Semel
 copyright_year   = 2015
-version = 2.04
+version = 2.05
 main_module = lib/HTTP/BrowserDetect.pm
 
 [GatherDir]
